--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "engines": {
-    "node": ">=14.18.1"
+    "node": "14.x"
   },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
