--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "engines": {
-    "node": "14.x"
+    "node": ">=16.14.0"
   },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
@@ -126,7 +126,7 @@
     "fs-extra": "^11.1.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "lint-staged": "^13.0.2",
+    "lint-staged": "^13.3.0",
     "mini-css-extract-plugin": "^2.3.0",
     "postcss": "^8.4.21",
     "postcss-loader": "^7.0.0",
